# wavGen

./: CMakeLists.txt  README.md
libwav/: wav.c  wav.h
main/: main.c  main.h
